--- a/Lolin-Pointer/platformio.ini
+++ b/Lolin-Pointer/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = lolin32
 framework = arduino
+monitor_filters = esp32_exception_decoder
 
 # using the latest stable version
 lib_deps = ESP Async WebServer, ArduinoJson
