--- a/Lolin-Pointer/platformio.ini
+++ b/Lolin-Pointer/platformio.ini
@@ -14,5 +14,11 @@ board = lolin32
 framework = arduino
 monitor_filters = esp32_exception_decoder
 
+[env:node32s]
+platform = espressif32
+board = node32s
+framework = arduino
+monitor_filters = esp32_exception_decoder
+
 # using the latest stable version
 lib_deps = ESP Async WebServer, ArduinoJson
